--- a/package.json
+++ b/package.json
@@ -1,55 +1,23 @@
 {
-  "name": "@deepflow/queue-sdk",
-  "version": "1.0.0",
-  "description": "A robust queue management SDK for NestJS applications with PostgreSQL",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write src/**/*.ts",
-    "prepare": "npm run build"
-  },
-  "keywords": [
-    "queue",
-    "nestjs",
-    "postgresql",
-    "pg-boss",
-    "job-queue",
-    "background-jobs"
-  ],
-  "author": "DeepFlow Team",
-  "license": "MIT",
-  "dependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "pg-boss": "^10.3.2",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "build": "pnpm -r build",
+    "build:sdk": "pnpm --filter @youbetdao/pg-boss-sdk build",
+    "test": "pnpm -r test",
+    "test:sdk": "pnpm --filter @youbetdao/pg-boss-sdk test",
+    "lint": "pnpm -r lint",
+    "lint:fix": "pnpm -r lint:fix",
+    "format": "pnpm -r format",
+    "clean": "pnpm -r exec rm -rf dist node_modules",
+    "dev": "pnpm --filter @youbetdao/pg-boss-sdk build --watch",
+    "publish:sdk": "pnpm --filter @youbetdao/pg-boss-sdk publish"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
     "@types/node": "^20.19.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
-  "peerDependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3"
-  },
-  "files": [
-    "dist",
-    "README.md"
-  ]
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  }
 }
